Fix radio-button alignment in general way + fix style of 'Deploy to mobile' and 'Push to webstore'

--- a/ide/app/spark_polymer_ui.css
+++ b/ide/app/spark_polymer_ui.css
@@ -185,15 +185,12 @@ spark-dialog {
   display: none;
 }
 
-/* Deploy to mobile dialog */
-#mobileDeployDialog .modal-body {
-  padding-top: 10px;
-  padding-bottom: 0;
+#pushUrl {
+  width: 20em;
 }
 
-#pushUrl {
-  margin-left: 17px;
-  width: 20em;
+.radio-button-dependency {
+  margin: 10px 0 0 20px;
 }
 
 .input-label {
@@ -212,10 +209,6 @@ spark-dialog {
   flex: 1 1 auto;
 }
 
-#webStorePublishDialog label {
-  margin-left: 5px;
-}
-
 [selectableTxt] {
   -webkit-user-select: text;
 }
@@ -230,16 +223,4 @@ spark-dialog {
 /* Override Bootstrap's 'font-weight: bold' style for labels */
 label {
   font-weight: 500;
-}
-
-.vert-align-box {
-  display:flex;
-  flex-flow: row;
-  align-items: center;
-  justify-content: flex-start;
-}
-
-.vert-align-box > * {
-  margin-top: 0;
-  margin-bottom: 0;
 }
